fix(waybar): less spacing (margin)

--- a/waybar/style.css
+++ b/waybar/style.css
@@ -14,6 +14,7 @@
 
 window#waybar {
   background: transparent;
+  border: none;
 }
 
 window > box {
@@ -21,7 +22,8 @@ window > box {
 
 #workspaces {
   background-color: @surface0;
-  margin: 5px;
+  margin-left: 6px;
+  margin-top: 6px;
 }
 
 #workspaces label {
@@ -43,7 +45,8 @@ window > box {
 #clock {
   background-color: @surface0;
   padding: 1px 10px;
-  margin: 5px 5px 5px 0;
+  margin-right: 6px;
+  margin-top: 6px;
   color: @pink;
 }
 
@@ -55,7 +58,7 @@ window > box {
 #battery {
   background-color: @surface0;
   padding: 1px 10px;
-  margin: 5px 0;
+  margin-top: 6px;
 }
 
 #network {
@@ -121,6 +124,7 @@ highlight {
 
 /* NO CAMBIA EL COLOR DEL SLIDER */
 
+/* PLAYER DOESN'T WORK */
 #custom-playerctl {
   background-color: @surface0;
   padding: 1px 10px;
